--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@
 carpentry: "cp"
 
 # Overall title for pages.
-title: "Workshop Title"
+title: "Online Instructor training, July 29-30, 2019"
 
 
 #------------------------------------------------------------
